# fastapi-tutorial

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: codeql.yml
chapters/: body_multiple_params.py  body_nested_models.py  path_params.py  path_params_numeric_validations.py  query_params.py  query_params_str_validation.py  response_model_return_type.py
